<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="7.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/description1" />
        <TextView android:id="@id/textView2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/description2" />
        <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/redblacktree" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/description3" />
        <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/rbt" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/description4" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/description5" />
        <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/insertion0" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/description6" />
        <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/insertion1" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/description7" />
        <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/insertion2" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/description8" />
        <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/insertion3" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/description9" />
        <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/insertion4" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/description10" />
        <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/insertion5" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/description11" />
        <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/deletion1" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/description12" />
        <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/deletion2" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/description13" />
        <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/deletion3" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/description14" />
        <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/deletion4" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/description15" />
        <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/deletion5" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/description16" />
        <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/deletion6" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/description17" />
    </LinearLayout>
</ScrollView>